--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-    c    <h1>Formulario</h1>
+        <h1>Formulario</h1>
+        <h2>HOLAAA ESTO ES UNA MODIFICACION EN GIT</h2>
     </div>
     
 </body>
